# markseek

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/markseek/: __init__.py  cli.py  config.py  core.py  embedder.py  watcher.py
src/markseek.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
