[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "markseek.__version__"}

[project]
name = "markseek"
dynamic = ["version"]
description = "Semantic search over your markdown vault -- lightweight, local, zero-config"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Graham and Hermes"},
]
keywords = ["semantic-search", "obsidian", "markdown", "embeddings", "local-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "watchdog>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
markseek = "markseek.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
markseek = ["templates/*"]

[tool.ruff]
line-length = 100
target-version = "py39"
